--- a/conference-dashboard-react/package.json
+++ b/conference-dashboard-react/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.4.0",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
