--- a/conference-dashboard-react/package.json
+++ b/conference-dashboard-react/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "^2.1.3",
     "react-select": "^5.4.0",
     "react-table": "^7.8.0",
+    "recharts": "^2.1.13",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
